# libffi

./: .gitignore  CMakeLists.txt  fficonfig.h.cmake.in  libffi-config.cmake.in  libffi.pc.cmake.in  test_windows_config.cmake
